Home Task 2 final v.`

--- a/HT1.html
+++ b/HT1.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="HomTask1.js"></script>
+    <!--<script src="HomTask1.js"></script>-->
+    <script src="shytia/index.js"></script>
 </head>
 <body>
 
